--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,6 @@ TensorFlow/models
 protoc/
 TensorFlow/envLibsite-packagesgoogleprotobufinternal
 TensorFlow/models
+TensorFlow/models
+TensorFlow/models
+TensorFlow/models
