--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,6 @@ TensorFlow/models
 TensorFlow/models
 TensorFlow/models
 TensorFlow/models
+workspace/training_demo/images
+TensorFlow/models
+TensorFlow/models
